fixed overflow issue for the third. Hope it's finally fixed!

--- a/src/app/core/gui/login/login.component.css
+++ b/src/app/core/gui/login/login.component.css
@@ -52,6 +52,8 @@ footer .logo {
     display: flex;
     flex-direction: column;
     flex: auto;
+    overflow-y: auto;
+    height: 200px;
 }
 
 .alert-success,
